--- a/sector-tareas.html
+++ b/sector-tareas.html
@@ -15,7 +15,7 @@
 }       
 
 body{
-    background-image: url(imagenes/pexels-hngstrm-1793525.jpg);
+    background-image: url(pexels-hngstrm-1793525.jpg);
     height: 100vh;
     background-repeat: no-repeat;
     background-position: center;
@@ -40,7 +40,7 @@ body{
     height: 20rem;
     width: 20rem;
     background-color: rgb(224, 224, 224);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 .hide{
